--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,15 @@
         "text_encoding": "cpp",
         "variant": "cpp",
         "cassert": "cpp"
-    }
+    },
+
+    // 📌 Aquí marcamos TODAS las prácticas con su propia carpeta src
+    "java.project.sourcePaths": [
+        "Practica 1/src",
+        "Practica 2/src",
+        "Practica 3/src"
+    ],
+
+    // 🔄 Recomendada para que Java refresque la configuración sin romperse
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
